<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MacroCalc</string>
    <string name="mainTitleText">MacroCalc</string>
    <string name="action_settings">Settings</string>
    <string name="calculateDietText">CALCULATE DIET</string>
    <string name="dietType">Diet Type</string>
    <string name="targetCaloriesString">Target Calories</string>
    <string name="macroRatioString">Macro Ratio</string>
    <string name="macroRatioFormatText">(Carb / Protein / Fat)</string>
    <string name="dailyIntakeOutputText">Daily Intake</string>
    <string name="title_activity_record_macro">RecordMacro</string>
    <string name="hello_world">Hello world!</string>
    <string name="todaysProgressText">TODAYS PROGRESS</string>
    <string name="caloriesString">Calories</string>
    <string name="carbString">Carbs</string>
    <string name="proteinString">Protein</string>
    <string name="fatString">Fats</string>
    <string name="addButton">+</string>
    <string name="useDietButton">Use This Diet</string>
    <string name="resetButton">Reset</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
